--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
 
         <!--maps-->
         <meta-data android:name="com.google.android.geo.API_KEY"
-               android:value="<YOUR-GCLOUD-API-KEY"/>
+               android:value="<YOUR-GCLOUD-API-KEY>"/>
 
         <activity
             android:name=".MainActivity"
